# iot-c

./: .gitignore  CMakeLists.txt  README.md  build.bat  root.cmake
src/: CMakeLists.txt
src/common/: Thread11.cpp  Thread11.h  buffer.h  cmap.h  log.h  minio.cpp  minio.h  sqlite_db.cpp  sqlite_db.h  udp_client.cpp  udp_client.h  unis_map222222.h
src/gb28181_server/: CMakeLists.txt  av_stream.cpp  av_stream.h  common.h  common_func.cpp  common_func.h  common_jni.h  h264.cpp  h264.h  media.cpp  media.h
src/gb28181_server/client/: CMakeLists.txt  com_hirain_sdk_gb28181_JNIGB28181Client.cpp  com_hirain_sdk_gb28181_JNIGB28181Client.h  gb28181client_api.cpp  gb28181client_api.h  gb28181client_cfg.xml  main.cpp  main.h
src/gb28181_server/server/: CMakeLists.txt  JNIGB28181.java  Makefile  com_hirain_sdk_gb28181_JNIGB28181.cpp  com_hirain_sdk_gb28181_JNIGB28181.h  gb28181server.sql  gb28181server_api.cpp  gb28181server_api.h  gb28181server_cfg.xml  main.cpp  main.h  md5.cpp  md5.h  parse_xml.cpp  parse_xml.h  sip.cpp  sip.h  test.cpp  test.h
src/gb28181_server/test/: CMakeLists.txt
src/gb28181_server/test/media/: CMakeLists.txt  gb28181media_cfg.xml  main.cpp  main.h  media_cfg.xml
src/gb28181_server/test/udp_client/: CMakeLists.txt  main.cpp  main.h  udp_cfg.xml
src/gb28181_server/tinyxml/: CMakeLists.txt  test.cpp  tinyxmlerror.cpp
src/media_common/: CMakeLists.txt  com_hirain_sdk_rtsp_JNIDeviceStream.cpp  com_hirain_sdk_rtsp_JNIDeviceStream.h  hirain_media.cpp  hirain_media.h  main.cpp  main.h  media.cpp  media.h
src/media_common/265player/: CMakeLists.txt  libffmpeg.js  test265.c  test265.cpp
src/media_common/test/: CMakeLists.txt  test-文件.cpp  test.cpp  test265.cpp
src/onvif_common/: CMakeLists.txt  com_hirain_sdk_rtsp_JNIAudioVideoConfiguration.cpp  com_hirain_sdk_rtsp_JNIAudioVideoConfiguration.h  com_hirain_sdk_rtsp_JNIDeviceAccess.cpp  com_hirain_sdk_rtsp_JNIDeviceAccess.h  com_hirain_sdk_rtsp_JNIPTZ.cpp  com_hirain_sdk_rtsp_JNIPTZ.h  main.cpp  main.h  media.cpp  onvifSDK_com.cpp  onvifSDK_com.h  onvifSDK_dump.cpp  onvifSDK_structDefine.h  onvifSDk_dump.h  soap.cpp  soap.h  thread_pool.h
src/onvif_common/onvif_win64/: soapClient.cpp  wsdd.nsmap
src/rtmp/: CMakeLists.txt
src/rtmp/doc/: RTMP模块JNI接口定义.txt  rtmp.txt
src/rtmp/src/: CMakeLists.txt  cmap.h  com_hirain_sdk_rtmp_JNIRtmp.cpp  com_hirain_sdk_rtmp_JNIRtmp.h  common_jni.cpp  common_jni.h  log.h  main.cpp  main.h  rtmp.xml  rtmp_api.cpp  rtmp_api.h  rtmp_media.cpp  rtmp_media.h  rtmp_stream.cpp  rtmp_stream.h  thread11.cpp  thread11.h
src/rtmp/src/tinyxml/: tinystr.cpp  tinyxml.h
src/tcp_server/src/: CMakeLists.txt
src/tcp_server/src/TcpClient/: CMakeLists.txt  TcpClient.xml  main.cpp  main.h  tcp_client.cpp  tcp_client.h
src/tcp_server/src/TcpServer/: CMakeLists.txt  TcpServer.xml  main.cpp  main.h  tcp_server.cpp  tcp_server.h
src/tcp_server/src/common/: CMakeLists.txt  common_func.cpp  common_func.h  main.cpp
src/tcp_server/src/log/: CMakeLists.txt  log.h  main.cpp  main.h
src/tcp_server/src/thread/: CMakeLists.txt  main.cpp  main.h  thread11.cpp  thread11.h
src/tcp_server/src/tinyxml/: CMakeLists.txt  cfg.xml  main.cpp
src/video_quality/: CMakeLists.txt
src/video_quality/src/: CMakeLists.txt  CMakeLists___old.txt  test.cpp  video_quality.cpp  video_quality.h
